# selene-oss

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  REFERENCE_INVENTORY.md  VISION_DRAFT.md
src/selene_oss/: __init__.py  cli.py  log_registry.py
tests/: test_cli.py  test_log_registry.py  test_public_contract.py
