[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selene-oss"
version = "0.1.0"
description = "Clean-room, state-driven command OS cockpit primitives for local AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jabarie Moore" }]
keywords = ["ai-agents", "local-first", "logs", "model-registry", "memory", "skills", "cockpit"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
selene = "selene_oss.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
